# PeerCache

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README.zh.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: README.md  bench_hicache.py  bench_mooncake.py  bench_peercache.py  common.py  run_baseline.py  sglang_sim.py
benchmarks/results/: .gitkeep  sandbox-tcp-baseline.json  sandbox-tcp-baseline.md
cpp/bindings/: pybind.cpp
cpp/include/peercache/: connection_manager.h  rdma_context.h  rdma_endpoint.h  transfer_engine.h  types.h
cpp/src/: connection_manager.cpp  rdma_context.cpp  rdma_endpoint.cpp  transfer_engine.cpp
docs/: architecture.md  architecture.zh.md  benchmarks.md  benchmarks.zh.md  changelog.md  changelog.zh.md  demo-multinode.md  demo-multinode.zh.md  getting-started.md  getting-started.zh.md  index.md  index.zh.md  performance.md  performance.zh.md  positioning.md  positioning.zh.md  sdk.md  sdk.zh.md
docs/assets/perf/: make_charts.py
examples/: sglang_launch.md
python/peercache/: __init__.py  config.py  directory.py  discovery.py  diskstore.py  hashring.py  metrics.py  pool.py  rpc.py  server.py  storage_server.py  store.py  transport.py  types.py
python/peercache/bench/: README.md  __init__.py  cli.py  compare.py  dist.py  hicache.py  microbench.py  mooncake_bench.py  sglang_sim.py
python/peercache/examples/: launch_meta.py  launch_storage.py
tests/: test_auto_meta.py  test_benchmarks_smoke.py  test_centralized.py  test_concurrency_tcp.py  test_config_and_types.py  test_directory.py  test_directory_reshard.py  test_discovery.py  test_disk_tier.py  test_diskstore.py  test_e2e_tcp.py  test_hashring.py  test_hicache_contract.py  test_hybrid.py  test_metrics.py  test_pool.py
